# nbody-sim

./: .env  .gitignore  Cargo.toml  README.md
examples/: radix_sort.rs  radix_sort.wgsl  radix_sort_wgpu.rs
shaders/: nbody.wgsl  render.wgsl
src/: app.rs  constants.rs  main.rs
src/gpu/: buffers.rs  compute.rs  egui_renderer.rs  mod.rs  renderer.rs
src/sim/: mod.rs  params.rs
src/utils/: config.rs  env.rs  logger.rs
utils/: extract_source.rs
