[package]
name = "particle_playground"
version = "0.1.0"
edition = "2024"
authors = ["Vincent S"]
description = "A particle simulation playground using Rust and wgpu"
default-run = "particle_playground"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
colored = "3.0.0"
dotenvy = "0.15.7"
egui = "0.32.3"
egui-wgpu = "0.32.3"
egui-winit = "0.32.3"
glam = "0.30.8"
log = "0.4.28"
pollster = "0.4.0"
rand = "0.9.2"
wgpu = "25.0.2"
winit = "0.30.12"

[[bin]]
name = "particle_playground"
path = "src/main.rs"

[[bin]]
name = "extract"
path = "utils/extract_source.rs"

[[example]]
name = "radix-sort"
path = "examples/radix_sort.rs"
